--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -9,10 +9,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+    - name: Setup .NET SDK
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: |
+          5.0.x
+          8.0.100-preview.7.23376.3
     - name: dotnet info
       run: dotnet --info
     - name: dotnet test GetStarted 
@@ -25,3 +27,5 @@ jobs:
       run: dotnet test P4_TestServer/TestServerIntegration.sln
     - name: dotnet test More 
       run: dotnet test P5_More/MoreFeatures.sln
+    - name: dotnet test MinimalAPI
+      run: dotnet test P6_MinimalAPI/MinimalApiSample.sln
