--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -1,4 +1,4 @@
-name: dotnetcore
+name: dotnet-ci
 
 on: [push]
 
@@ -8,13 +8,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: |
-          6.0.x
-          8.0.100-rc.2.23502.2
+          6.x
+          8.x
     - name: dotnet info
       run: dotnet --info
     - name: dotnet test GetStarted 
